<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_settings_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/settings"
        android:textColor="@android:color/white"
        android:textSize="36sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:id="@+id/layout_sound"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height">

            <TextView
                style="@style/SettingsLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/settings_sound"/>

            <TextView
                android:id="@+id/tv_sound"
                style="@style/SettingsValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_music"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height">

            <TextView
                style="@style/SettingsLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/settings_bgm"/>

            <TextView
                android:id="@+id/tv_music"
                style="@style/SettingsValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/ok"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="120dp"
        android:background="@drawable/settings_btn_bg"
        android:padding="5dp"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

</LinearLayout>
